--- a/page1.html
+++ b/page1.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="cid-rhrvOpOVEY mbr-fullscreen mbr-parallax-background" id="header2-o">
+<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="cid-rhrvOpOVEY mbr-fullscreen mbr-parallax-background" id="header2-o">
 
     
 
@@ -394,7 +394,7 @@ Al momento de noticarnos sobre el logotipo que escojas, deberás enviarnos en el
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Pronto te estaremos contactando.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UPUBt8dC5vKCc7eDOivTDvlzoakA/QEHe9Zcrqs2SxMW+/IcDQuBVCQ2VaZZKLTPFRyhJczLzmL8ypuhtuX245kpO9OeuEk5+tot6p9QzcTyEiE7+EfniIELG1oY7G/P">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VqO6kuxp0vU9NX/dnS29WF46jczOoVCRkY+4YIeGVrnsHgd5ftySXUzAG27n6OoRTpIsjz70WPbVyE1LcLQr4RDx4os2wt6e2lr+Xhxm80305JHu2CQuS7HgISW7qBv8">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -433,7 +433,7 @@ Al momento de noticarnos sobre el logotipo que escojas, deberás enviarnos en el
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="http://www.simple-pick.com">
-                        <img src="assets/images/logo-sp-cuadrado-192x1708.png" alt="" title="">
+                        <img src="assets/images/logo-sp-cuadrado-192x1709.png" alt="" title="">
                     </a>
                 </div>
             </div>
