--- a/page1.html
+++ b/page1.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="cid-rhrvOpOVEY mbr-fullscreen mbr-parallax-background" id="header2-o">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section class="cid-rhrvOpOVEY mbr-fullscreen mbr-parallax-background" id="header2-o">
 
     
 
@@ -145,7 +145,7 @@ Nuestros expertos diseñadores, desarrollan y crean nuevos conceptos constanteme
                     <div class="step-text-content align-center">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-7"><strong>Navega</strong></h4>
                         <p class="mbr-step-text mbr-fonts-style display-7">por toda la colección de logotipos que ofrecemos en nuestro feed de Instagram:<br><a href="https://www.instagram.com/simple.pick/" target="_blank">www.instagram.com/simple.pick</a><br> 
-y consulta nuestros términos y condiciones de uso y politicas de privacidad, que están al final del documento.</p>
+y consulta nuestros términos y condiciones de uso y politicas de privacidad, que se encuentran al final de esta página.</p>
                     </div>
                 </div>
             </div>
@@ -394,7 +394,7 @@ Al momento de noticarnos sobre el logotipo que escojas, deberás enviarnos en el
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Pronto te estaremos contactando.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="QVJDN9bW7dSZaFJRK2WJA5Mbnfp42MR/KX9EUYoZXw+fSx1tjGxFvsIAtJ+Po7cGBsYhNOjjVxX8BhLyjbKykgaxT0liZfMt/bBeVVcfRLlcCQ6SbBIMx9C/CHI0xnZj">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wHfuPU5AjkDiA6Pc5uUQLRkmaAq7eC4IUCg97llD7G/eOAe2tgQ7lkMsOyxusgdJzSZvl0kYp1obcI/AagvSBwlFqJqKEe8cVayh5UaeYjOEIskFbDy787pD7AxYmLHR">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -433,7 +433,7 @@ Al momento de noticarnos sobre el logotipo que escojas, deberás enviarnos en el
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="http://www.simple-pick.com">
-                        <img src="assets/images/logo-sp-cuadrado-192x17010.png" alt="" title="">
+                        <img src="assets/images/logo-sp-cuadrado-192x17011.png" alt="" title="">
                     </a>
                 </div>
             </div>
