--- a/page1.html
+++ b/page1.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section class="cid-rhrvOpOVEY mbr-fullscreen mbr-parallax-background" id="header2-o">
+<section class="engine"><a href="https://mobirise.info/e">make a site</a></section><section class="cid-rhrvOpOVEY mbr-fullscreen mbr-parallax-background" id="header2-o">
 
     
 
@@ -394,7 +394,7 @@ Al momento de noticarnos sobre el logotipo que escojas, deberás enviarnos en el
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Pronto te estaremos contactando.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wHfuPU5AjkDiA6Pc5uUQLRkmaAq7eC4IUCg97llD7G/eOAe2tgQ7lkMsOyxusgdJzSZvl0kYp1obcI/AagvSBwlFqJqKEe8cVayh5UaeYjOEIskFbDy787pD7AxYmLHR">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ipzqmQyI8lEJreyQDwW4V4ySzxDkAoxQMqZFMZbeRyHt/m0KATlhYwTqqFrF/TFIYxFqgE3VHN5PrYF/ntpHn1ZYzCliqy34IGxP/DnS/3JcsP5AvwCtQtg/e1BpEU9L">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -433,7 +433,7 @@ Al momento de noticarnos sobre el logotipo que escojas, deberás enviarnos en el
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
                     <a href="http://www.simple-pick.com">
-                        <img src="assets/images/logo-sp-cuadrado-192x17011.png" alt="" title="">
+                        <img src="assets/images/logo-sp-cuadrado-192x17012.png" alt="" title="">
                     </a>
                 </div>
             </div>
